--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             grid-column: span 2 / span 2;
             grid-row: span 11 / span 11;
             background-color: antiquewhite;
-           
+           height: 900px;
         }
 
         .div2 {
